fix image card button sizing on mobile

--- a/auricroad/static_source/sass/components/_hotels_list.scss
+++ b/auricroad/static_source/sass/components/_hotels_list.scss
@@ -77,6 +77,11 @@
                 @include xy-grid();
                 a {
                     margin-right: 30px;
+                    @include breakpoint(mediumsmall down) {
+                        button {
+                            min-width: 170px;
+                        }
+                    }
                 }
             }
         }
